--- a/app/src/main/res/layout/fragment_bmical.xml
+++ b/app/src/main/res/layout/fragment_bmical.xml
@@ -106,6 +106,15 @@
 
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/weightTest"
+            android:textColor="#ffffff"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
     </RelativeLayout>
 
 
